Fix image paths and clean up HTML structure

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header> 
 <section id="about">
 <div class="container">
-<img src= "images/profile.jpg" alt="Profile Photo">
+<img src= "profile.jpg" alt="Profile Photo">
 <h1> Sam McHose </h1>
 <h4 style="font-family: 'Courier New', Courier, monospace; color: brown"> Welcome to my contact page! </h4>
 <p> I'm a sophomore at Iowa State majoring in Software engineering and minoring in data science. </p>
@@ -32,7 +32,7 @@
     <div class="container">
 <h2>Projects</h2>
 <div class="project">
-<img src= "images/project1.jpg" alt="Enigma Machine">
+<img src= "project1.jpg" alt="Enigma Machine">
 <h2>Enigma Machine</h2>
 <h3> Language used: C. </h3>
 <p>This is the first project that I completed in the SE major
@@ -56,3 +56,4 @@
 </body>
 
 </html>
+
